# gtex-qtl

./: .gitignore  .gitmodules  .pylintrc  README.md  gtex_qtl.py  pyproject.toml
doc/: Makefile  conf.py  gtex_qtl.rst  index.rst  local_settings.py  modules.rst
gtex_qtl/: __init__.py  compare.py  downloads.py  fastqtl.py  fastqtl.wdl  peer.py  pipeline.py  plots.py  preprocess.py  qtl.py  qtl_tool.py  residualize.py  stats.py  template.py  utils.py  vcf.py
tests/: test_qtl.py
