[project]
name = "gtex-qtl"
version = "0.1.dev1"
dependencies = [
    "pandas",
    "plotly",
    "datashader",
    "galp @ git+ssh://git@github.com/emorice/galp.git",
    "wdl_galp @ git+ssh://git@github.com/emorice/wdl-galp.git",
    "gemz[peer] @ git+ssh://git@github.com/emorice/gemz.git"
    ]

[project.optional-dependencies]
dev = [
  "pylint",
  "sphinx",
  "pydata-sphinx-theme",
  "pynvim",
  "jedi"
]
