[project]
name = "gtex-qtl"
version = "0.1.dev1"
dependencies = [
    "pandas",
    "pyarrow",
    "plotly",
    "datashader",
    "galp[wdl] @ git+ssh://git@github.com/emorice/galp.git",
    "gemz[peer] @ git+ssh://git@github.com/emorice/gemz.git",
    "gemz_galp @ git+ssh://git@github.com/emorice/gemz-galp.git",
    ]

[project.optional-dependencies]
dev = [
  "pylint",
  "sphinx",
  "pydata-sphinx-theme",
  "pynvim",
  "jedi"
]
