[project]
name = "gtex-qtl"
version = "0.1.dev1"
dependencies = [
    "pandas",
    "pyarrow",
    "plotly",
    "kaleido",
    "datashader",
    "dask-expr", # silence datashader warning
    "galp[wdl] @ git+ssh://git@github.com/emorice/galp.git",
    "aiohttp", # http galp interface
    "gemz[peer] @ git+ssh://git@github.com/emorice/gemz.git",
    "gemz_galp @ git+ssh://git@github.com/emorice/gemz-galp.git",
    "tqdm",
    ]

[project.optional-dependencies]
dev = [
  "pylint",
  "sphinx",
  "pydata-sphinx-theme",
  "pynvim",
  "jedi",
  "pytest",
]

[project.scripts]
gtex-qtl-plots = "gtex_qtl.plots:main"
